[add] add number input

--- a/server_on_nodejs/index.html
+++ b/server_on_nodejs/index.html
@@ -5,16 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Control Robot Arm</title>
-    <link rel="stylesheet" href="/public/css/index.css" />
+    <link rel="stylesheet" href="public/css/index.css" />
   </head>
   <body>
     <div class="container">
       <h1>Robot arm control</h1>
-      <div class="robtArmDiv">
+      <div class="robotArmDiv">
         <div id="jsRobotArmTable"></div>
       </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.3/socket.io.js"></script>
-    <script src="/public/javascript/motor.js"></script>
+    <script src="public/javascript/motor.js"></script>
+    <!-- 에러가 난다면 js와 css 경로 부분을 살펴보자 -->
   </body>
 </html>
