[add] add css style

--- a/server_on_nodejs/index.html
+++ b/server_on_nodejs/index.html
@@ -9,9 +9,9 @@
   </head>
   <body>
     <div class="container">
-      <h1>Robot arm control</h1>
       <div class="robotArmDiv">
-        <div id="jsRobotArmTable"></div>
+        <div class="robotArmTitle">Robot arm control</div>
+        <div id="jsRobotArmTable" class="robotArmTable"></div>
       </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.3/socket.io.js"></script>
