[add] add refresh function

--- a/server_on_nodejs/index.html
+++ b/server_on_nodejs/index.html
@@ -10,7 +10,10 @@
   <body>
     <div class="container">
       <div class="robotArmDiv">
-        <div class="robotArmTitle">Robot arm control</div>
+        <div class="robotArmTitle">
+          Robot arm control
+          <div id="jsRobotArmRefresh" class="robotArmRefresh"></div>
+        </div>
         <div id="jsRobotArmTable" class="robotArmTable"></div>
       </div>
     </div>
