[fix] fix refresh function

--- a/server_on_nodejs/index.html
+++ b/server_on_nodejs/index.html
@@ -12,7 +12,13 @@
       <div class="robotArmDiv">
         <div class="robotArmTitle">
           Robot arm control
-          <div id="jsRobotArmRefresh" class="robotArmRefresh"></div>
+          <div id="jsRobotArmRefresh" class="robotArmRefresh">
+            <img
+              src="public/image/refresh.png"
+              alt="refresh"
+              class="refreshImg"
+            />
+          </div>
         </div>
         <div id="jsRobotArmTable" class="robotArmTable"></div>
       </div>
